RESOLVED FIXED315097
[webgpu] fix a build failure on iOS due to 'MTLGPUFamilyMac2' deprecation
https://bugs.webkit.org/show_bug.cgi?id=315097
Summary [webgpu] fix a build failure on iOS due to 'MTLGPUFamilyMac2' deprecation
Antoine Quint
Reported 2026-05-19 07:48:46 PDT
The build can be broken on certain platforms due to 'MTLGPUFamilyMac2' deprecation.
Attachments
Antoine Quint
Comment 1 2026-05-19 07:49:28 PDT
EWS
Comment 2 2026-05-19 10:19:49 PDT
Committed 313497@main (5ea5ea55d1a1): <https://commits.webkit.org/313497@main> Reviewed commits have been landed. Closing PR #65187 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-19 10:20:13 PDT
Note You need to log in before you can comment on or make changes to this bug.