[webgpu] fix a build failure on iOS due to 'MTLGPUFamilyMac2' deprecation https://bugs.webkit.org/show_bug.cgi?id=315097

Reviewed by Mike Wyrzykowski.

* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::computeMaxCountForDevice):
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::rawHardwareCapabilities):

Canonical link: https://commits.webkit.org/313497@main